--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -1300,4 +1300,34 @@ type = {Conference Proceedings},
    year = {1998},
    type = {Journal Article}
 }
-
+@article{Wei2011,
+   author = {Wei, Liang and Pollard, Andrew},
+   title = {Direct numerical simulation of compressible turbulent channel flows using the discontinuous Galerkin method},
+   journal = {Computers \& Fluids},
+   volume = {47},
+   number = {1},
+   pages = {85-100},
+   ISSN = {0045-7930},
+   year = {2011},
+   type = {Journal Article}
+}
+@article{Hamilton1995,
+   author = {Hamilton, James M and Kim, John and Waleffe, Fabian},
+   title = {Regeneration mechanisms of near-wall turbulence structures},
+   journal = {Journal of Fluid Mechanics},
+   volume = {287},
+   pages = {317-348},
+   ISSN = {1469-7645},
+   year = {1995},
+   type = {Journal Article}
+}
+@article{Jeong1997,
+   author = {Jeong, Jinhee and Hussain, Fazle and Schoppa, Wade and Kim, John},
+   title = {Coherent structures near the wall in a turbulent channel flow},
+   journal = {Journal of Fluid Mechanics},
+   volume = {332},
+   pages = {185-214},
+   ISSN = {0022-1120},
+   year = {1997},
+   type = {Journal Article}
+}
